--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta name="viewport" content="width=device-width, intial-scale=1.0"
-        <title>task 1 caluculator</title>
+        <title>calculator</title>
         <link rel="stylesheet" href="calci.css">
     </head>
     <body>
