--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
         <link rel="stylesheet" href="calci.css">
     </head>
     <body>
+        <h1>CALCULATOR</h1>
      <div class="container">
         <div class="calculator">
             <form>
