--- a/index.html
+++ b/index.html
@@ -1,12 +1,10 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <meta name="viewport" content="width=device-width, intial-scale=1.0"
-        <title>calculator</title>
+        <meta name="viewport" content="width=device-width, intial-scale=1.0">
         <link rel="stylesheet" href="calci.css">
     </head>
     <body>
-        <h1>CALCULATOR</h1>
      <div class="container">
         <div class="calculator">
             <form>
@@ -15,7 +13,7 @@
                </div>
                <div>
                 <input type="button" value="AC" onclick="display.value = '' " class="ac">
-                <input type="button" value="DE" onclick="display.value=display.value.toString().slice(0,-1)" class="ac">
+                <input type="button" value="DE" onclick="display.value=display.value.toString().slice(0,-1)" class="r">
                 <input type="button" value="."  onclick="display.value += '.' " class="ac">
                 <input type="button" value="/"  onclick="display.value += '/' " class="ac">
                </div>
